# ignitio-ai-tutor

./: .gitignore  Claude.md  README.md  main.py  pyproject.toml  test_builder.py  test_critic_retry.py
.claude/: settings.local.json
api/: __init__.py  config.py  exceptions.py  main.py  sessions.py
api/routes/: __init__.py  tutor.py
api/schemas/: __init__.py  requests.py
core/: llm.py
graph/: __init__.py  builder.py  state.py
nodes/: __init__.py
nodes/builder/: __init__.py  node.py  prompt.py
nodes/critic/: __init__.py  node.py  prompt.py
nodes/orchestrator/: __init__.py  node.py  prompt.py
nodes/roadmap/: node.py  prompt.py
nodes/teaching/: __init__.py  node.py  prompt.py
